# Master_Drone

./: README.md
spc_uav_comm/: CMakeLists.txt  README.txt  package.xml
spc_uav_comm/action/: LearnParam.action
spc_uav_comm/config/common/: mocap.yaml  msf_parameters_pixhawk_optitrack.yaml
spc_uav_comm/config/rqt_multiplot/: rqt_multiplot.xml  rqt_multiplotEnergyTanks.xml  rqt_multiplotEnergyTanks_Exp.xml  rqt_multiplotEnergyTanks_Global.xml  rqt_multiplot_Impedance_Control_RotorS_Gamma.xml  rqt_multiplot_Wall_Drawing.xml  rqt_multiplot_Wall_Drawing_Exp.xml  rqt_multiplot_Wall_Drawing_Learn.xml  rqt_multiplot_Wall_Push_Learn_Exp.xml  rqt_multiplot_px4_motor_commands.xml  rqt_multiplot_x_pos.xml
spc_uav_comm/launch/: gui_aeroworks.launch  gui_omni_uav.launch  learning_module.launch
spc_uav_comm/msg/: ControlSignals.msg  ETankControlSignals.msg
spc_uav_comm/scripts/: learning.py  learning_gui.py  practical.py  simulation_gui.glade  simulation_gui.py  simulation_omni_gui.glade~  simulation_omni_gui.py
spc_uav_comm/scripts/bayes_opt/: bayesian_optimization.py  helpers.py
spc_uav_comm/scripts/custom_trajectories/: R_letter-trajectory-y.txt  R_letter-trajectory-z.txt  circle_draw_test-trajectory-y.txt  circle_draw_test-trajectory-z.txt  ram_logo_test1-trajectory-y.txt  ram_logo_test1-trajectory-z.txt  ram_logo_test_2-trajectory-y.txt  ram_logo_test_2-trajectory-z.txt  ram_test_2-trajectory-y.txt  ram_test_2-trajectory-z.txt  ram_test_3-trajectory-y.txt  ram_test_3-trajectory-z.txt  ram_test_5-trajectory-y.txt  ram_test_5-trajectory-z.txt  test_12-trajectory-y.txt  test_12-trajectory-z.txt
spc_uav_comm/scripts/practical/: _circle2d1.16-1-2s0.2.pkl  circle2d1.16-1-2s0.4.pkl  learning_results_2018-11-06-15-46-22.pkl  traj-circle2d1.16-0.pkl  traj-circle2d1.16-50.pkl
spc_uav_comm/scripts/results_asem/: circle2d0.4-1-2s0.2.pkl  circle2d0.4-11-2s0.2.pkl  circle2d0.8-1-2s0.2.pkl  circle2d1.16-1-2s0.2.pkl  circle2d1.16-11-2s0.2.pkl  circle2d1.4-1-2s0.2.pkl  circle2d1.4-11-2s0.2.pkl  circle4d0.4-1-2s0.2.pkl  circle4d0.4-1-2s0.5.pkl  circle4d0.4-11-2s0.2.pkl  circle4d0.4-11-2s0.5.pkl  circle4d0.4-111-2s0.2.pkl  circle4d0.4-1111-2s0.2.pkl  circle4d0.8-1-2s0.2.pkl  circle4d0.8-1-2s0.2d0.05-0.005.pkl  circle4d0.8-1-2s0.5.pkl  circle4d0.8-11-2s0.2.pkl  circle4d0.8-11-2s0.2d0.05-0.005.pkl  circle4d0.8-111-2s0.2.pkl  circle4d0.8-1111-2s0.2.pkl  circle4d1.16-1-2s0.2.pkl  circle4d1.16-1-2s0.2d0.1.pkl  circle4d1.16-1-2s0.5.pkl  circle4d1.16-11-2s0.2.pkl  circle4d1.16-11-2s0.5.pkl  circle4d1.16-111-2s0.2.pkl  circle4d1.16-1111-2s0.2.pkl  circle4d1.16-2-2s0.2.pkl  circle4d1.4-1-2s0.2.pkl  circle4d1.4-1-2s0.5.pkl  circle4d1.4-11-2s0.2.pkl  circle4d1.4-11-2s0.5.pkl  circle4d1.4-111-2s0.2.pkl  circle4d1.4-1111-2s0.2.pkl  square2d0.4-1-2s0.2.pkl  square2d0.4-11-2s0.2.pkl  square2d0.8-1-2s0.2.pkl  square2d1.16-1-2s0.2.pkl  square2d1.16-11-2s0.2.pkl  square2d1.4-1-2s0.2.pkl  (+34 more)
spc_uav_comm/scripts/results_ramy/: 1_circle_2d_stiff_damp.pkl  2_circle_2d_stiff_damp.pkl  3_test_traj.pkl  4_circle2d1.16-1-2s0.2.pkl  5_traj_0.pkl  6_traj_end.pkl  7_circle2d1.16-1-2s0.2.pkl  learning_results_2018-11-01-14-22-49.pkl  learning_results_2018-11-01-17-07-16.pkl  learning_results_2018-11-06-15-00-26.pkl
spc_uav_control/: CMakeLists.txt  package.xml
spc_uav_control/config/cfg/: Admittance_Control.cfg  ET_Impedance_Control.cfg  Impedance_Control.cfg  SE3_Control.cfg  SO3_Control.cfg  pixhawk_contact.cfg
spc_uav_control/config/static/: ETank_Impedance_Control_Gains_betaX.yaml  Impedance_Control_Gains_betaX.yaml  Impedance_Control_Gains_gamma (old).yaml  Impedance_Control_Gains_gamma.yaml  SE3_Control_Gains_betaX.yaml  SE3_Control_Gains_betaX2.yaml  SE3_Control_Gains_gamma.yaml  SO3_Control_Gains_alpha.yaml  SO3_Control_Gains_beta.yaml  SO3_Control_Gains_iris.yaml
spc_uav_control/include/spc_uav_control/: MathHelper.h  controller_node.h  energy_tank.h  etank_impedance_controller.h  etank_impedance_controller_node.h  geom_impedance_controller.h  geom_impedance_controller_node.h  geometric_SE3_controller.h  geometric_SE3_controller_node.h  geometric_SO3_controller.h  geometric_SO3_controller_node.h  geometric_adm_controller.h  geometric_adm_controller_node.h
spc_uav_control/launch/: SE3_controller.launch  SO3_controller.launch  admittance_controller.launch  etank_impedance_controller.launch  impedance_controller.launch
spc_uav_control/src/: MathHelper.cpp  controller_node.cpp  energy_tank.cpp  etank_impedance_controller.cpp  etank_impedance_controller_node.cpp  geom_impedance_controller.cpp  geom_impedance_controller_node.cpp  geometric_SE3_controller.cpp  geometric_SE3_controller_node.cpp  geometric_SO3_controller.cpp  geometric_SO3_controller_node.cpp  geometric_adm_controller.cpp  geometric_adm_controller_node.cpp
spc_uav_description/: CMakeLists.txt  package.xml
spc_uav_description/config/: config_file.rviz  config_file_cam.rviz  config_file_s_cam.rviz  config_file_s_cam_m_pointc.rviz
spc_uav_description/launch/: spawn_uav.launch  spawn_uav_rotorS.launch
spc_uav_description/meshes/: alpha.stl
spc_uav_description/scripts/: useful_commands
spc_uav_description/urdf/: alpha.xacro  beta.xacro  betaX.xacro  component_snippets_mod.xacro  gamma.xacro  mav_generic_odometry_sensor.gazebo  multirotor_base_mod.xacro  stereo_cam_mod.xacro  uav_mech_components.xacro
spc_uav_description/urdf/px4_sitl/: alpha_base.urdf.xacro  (+3 more)
spc_uav_main/: CMakeLists.txt  package.xml
spc_uav_main/experiment/: extras.txt
spc_uav_main/scripts/: replaying experiment in rviz
spc_uav_simulator/: CMakeLists.txt  package.xml
spc_uav_simulator/config/: config_file.rviz
spc_uav_simulator/launch/: gazebo_sitl_wrap_node.sh  posix_sitl_gazebo.launch  posix_sitl_gazebo_direct.launch  posix_sitl_gazebo_newFirm.launch  rotors_gazebo.launch
spc_uav_simulator/models/: model.sdf  model1.sdf
spc_uav_simulator/src/: simulation_publisher.cpp
spc_uav_simulator/worlds/: gas_station.world  gas_station_filled.world  interaction.world  obj_of_int.world  stereo_cam_calibration.world  wall_1x.world  wall_2x.world  wall_px4.world
(+115 files in other folders)
