<?xml version="1.0"?>
<package format="2">
  <name>spc_uav_comm</name>
  <version>0.0.0</version>
  <description>The spc_uav_comm package</description>

  <maintainer email="ramy@todo.todo">ramy</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>spc_uav_visual</build_depend>


  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>spc_uav_visual</exec_depend>


  <export>   </export>


</package>
