<?xml version="1.0"?>
<package format="2">
  <name>spc_uav_control</name>
  <version>0.0.0</version>
  <description>The spc_uav_control package includes all control algorithms and their ROS wrapper nodes</description>

  <maintainer email="ramy@todo.todo">ramy</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>mav_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>spc_uav_comm</build_depend>
          
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>eigen</exec_depend>
  <exec_depend>cmake_modules</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>genmsg</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>tf_conversions</exec_depend>
  <exec_depend>mav_msgs</exec_depend>   
  <exec_depend>actionlib_msgs</exec_depend>  
  <exec_depend>spc_uav_comm</exec_depend> 
        
        
  <export>      </export>
  
</package>

