cmake_minimum_required(VERSION 2.8.3)
project(spc_uav_main)

find_package(catkin REQUIRED)

catkin_package(
#  INCLUDE_DIRS include
#  LIBRARIES spc_uav_main
#  CATKIN_DEPENDS other_catkin_pkg
#  DEPENDS system_lib
)

###########
## Build ##
###########
include_directories(
# include
# ${catkin_INCLUDE_DIRS}
)


