<?xml version="1.0"?>
<package format="2">
  <name>spc_uav_simulator</name>
  <version>0.0.0</version>
  <description>The spc_uav_simulator package contains gazebo launch files, px4_sitl launch files and gazebo worlds</description>

  <maintainer email="ramy@todo.todo">ramy</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>


  <build_depend>geometry_msgs</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>mav_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>





    <exec_depend>roscpp</exec_depend>        
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <exec_depend>tf</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>tf_conversions</exec_depend>
  <exec_depend>mav_msgs</exec_depend>   



  <export>   </export>

</package>
